# youtube-tui

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
tests/: test_models.py  test_playback_smoke.py  test_storage.py  test_video_list.py  test_ytdlp_client.py
youtube_tui/: __main__.py  app.py  config.py  models.py  tui.tcss
youtube_tui/data/: cache.py  thumbnails.py  ytdlp_client.py
youtube_tui/playback/: ipc.py  mpv_process.py
youtube_tui/screens/: help.py  home.py  library.py  now_playing.py  search.py  video_detail.py
youtube_tui/storage/: db.py  schema.sql
youtube_tui/widgets/: _image.py  status_bar.py  video_card.py  video_list.py
